// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component renders an empty li when sections prop is not supplied 1`] = `
<ul>
  <li>
    <button
      onClick={[Function]}
    >
      
    </button>
  </li>
</ul>
`;

exports[`Accordion Component renders the UI as expected 1`] = `
<ul>
  <li>
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
</ul>
`;
